# CSD_26-27

./: .gitmodules
csd2a/25-26/: opdrachten.md  sessions_overview_tbd.md  take_aways_for_CSD.md
csd2a/25-26/session1/: session.md
csd2a/25-26/session2/: session.md
csd2a/25-26/session3/: 3a_playRhythm.py  3a_playRhythm_final.py  3b_time_test.py  3d_timestamps.py  3d_timestamps_final.py  session.md
csd2a/25-26/session3/sample_player/: 01_playASound.py  02_timedPlayback.py  03_randomTime.py  04_randomNoteDuration.py  05_oneSampleSequenceSteps.py  06_oneSampleSequenceTime.py
csd2a/25-26/session4/: 4a_functions.py  4b_functions.py  4c_event_handling.py  4d_dictionary_sorting_function.py  4e_dictonary.py  4f_dictionary_generation_function.py  session.md
csd2a/25-26/session5/: 5a_module_import.py  5b_userinput.py  5c_ui_func_options_easy.py  5d_ui_func_options_modular.py  5e_ui_func_options_modular_recursive.py  5f_ui_func_type_range.py  question_mutables.py  session.md  user_name_module.py
csd2a/25-26/session5/blueprint/: 5c_user_input_function.py
csd2a/25-26/session6/: session.md
csd2a/25-26/temp/: output.txt  year_days.py
csd2a/assignments/: _deliverables_deadlines.md  _main_assignment_IrregularBeatGenerator.md  session1_.md  session1_hello_bleep.md  session2_.md  session3.md  session4.md  session5.md  session6.md
csd2a/session1/: session.md
csd2a/session5/: question_mutables.py  session.md
csd2b/25-26/: CMakeLists.txt
csd2b/25-26/_assignments/: 1_Leerdoelen_design.md  1_assignments.md  2_assignments.md  2_audio_flow_and_pseudo_code.md  3_assignments.md  4_assignments.md  CMakeLists.txt  CSD_25-26_csd2b__assignments_2_audio_flow_and_pseudo_code.md at main · ciskavriezenga_CSD_25-26.html
csd2b/25-26/_assignments/2_melody/: CMakeLists.txt  callback.cpp  callback.h
csd2b/25-26/_assignments/CSD_25-26_csd2b__assignments_2_audio_flow_and_pseudo_code.md at main · ciskavriezenga_CSD_25-26_files/: 555322  555322(1)  element-registry-19b59576a156.js  wp-runtime-30fd58aaddf6.js
csd2b/25-26/_session1/: compilen.md  session.md
csd2b/25-26/_session1/1_hello/: CMakeLists.txt  hello.cpp
csd2b/25-26/_session1/2_note_class/: CMakeLists.txt  main.cpp
csd2b/25-26/_session1/2_note_class_final/: main.cpp
csd2b/25-26/_session1/3_speaker/: CMakeLists.txt  main.cpp
csd2b/25-26/_session1/4_simpleInheritance_final/: CMakeLists.txt
csd2b/25-26/_session2/: 2_sine_information.R  CMakeLists.txt  session.md
csd2b/25-26/_session2/0_peer_reviews/: questions.md
csd2b/25-26/_session2/1_oscillator/: oscillator.cpp  oscillator.h
csd2b/25-26/_session2/1_oscillator_final/: CMakeLists.txt
csd2b/25-26/_session2/1_oscillator_stepBstep/: 2_oscillator.cpp  CMakeLists.txt  notes.md
csd2b/25-26/_session2/3_precision/: CMakeLists.txt
csd2b/25-26/_session2/4_sine/: CMakeLists.txt  main.cpp  sine.cpp  sine.h
csd2b/25-26/_session2/5_soundingSine/: CMakeLists.txt  sine.cpp
csd2b/25-26/_session3/: CMakeLists.txt  session.md
csd2b/25-26/_session3/1_override/: oscillator.cpp
csd2b/25-26/_session3/1_override_final/: CMakeLists.txt
csd2b/25-26/_session3/2_override_callFromBase/: CMakeLists.txt
csd2b/25-26/_session3/3_sineSquareSaw/: CMakeLists.txt  callback.cpp  callback.h  main.cpp  oscillator.cpp  oscillator.h  sine.cpp  square.cpp
csd2b/25-26/_session3/4_sineSquareSaw_Final/: CMakeLists.txt  callback.cpp  callback.h
csd2b/25-26/_session4/: CMakeLists.txt  session.md
csd2b/25-26/_session4/1_melody/: CMakeLists.txt  callback.cpp  callback.h  melody.cpp  (+4 more)
csd2b/25-26/_session4/3_enum_choices/: CMakeLists.txt  synth.h  uiUtilities.h
csd2b/25-26/_session4/extra_fm_code/: CMakeLists.txt  callback.cpp  callback.h  melody.h  notes.md  oscillator.h
csd2b/25-26/_session5/: CMakeLists.txt  session.md
csd2b/25-26/_session5/2_polymorphism_dynamicAllocation/: CMakeLists.txt  main.cpp  oscillator.h
csd2b/25-26/voorbereiding/: 1_install_compiler.md  2_compilen_hello_world.md  3_install_IDE.md
csd2b/25-26/x_24-25/: install_compiler.md
csd2c/25-26/: CMakeLists.txt  references_self-study.md
csd2c/25-26/_01_session/: CMakeLists.txt  aandachtspunten.md  session.md
csd2c/25-26/_02_session/: CMakeLists.txt
csd2c/25-26/_05_session/: session.md
csd2c/25-26/_06_session/: CMakeLists.txt  session.md
csd2c/25-26/_06_session/delay_old_lib/1_delay_simple/: CMakeLists.txt  delay.cpp  delay.h  main.cpp
csd2c/25-26/_06_session/delay_old_lib/2_delay_calculated_delta/: CMakeLists.txt  callback.cpp  callback.h  delay.cpp  delay.h  main.cpp
csd2c/25-26/_06_session/delay_old_lib/3_line_signal/: CMakeLists.txt  line.cpp  line.h  main.cpp  signal.cpp  signal.h
csd2c/25-26/_07_session/: CMakeLists.txt
csd2c/25-26/assignments/: 1_assignments.md
csd2c/25-26/block-diagram-examples/: chorus.md  flanger.md  reference.md
csd2c/25-26/blueprint_projects/: CMakeLists.txt
csd2c/25-26/blueprint_projects/PP_C_Focus/: CMakeLists.txt  osc_server.h  settings.h  simple_python_client.py
csd2c/25-26/blueprint_projects/PP_C_Focus/csd_lib/: audiocomponent.h
csd2c/25-26/blueprint_projects/PP_C_Focus/csd_lib/effects/: effect.cpp  waveShaper.h
csd2c/25-26/blueprint_projects/PP_C_Focus/csd_lib/oscillators/: oscillator.cpp  oscillator.h
csd2c/25-26/blueprint_projects/PP_C_Focus/csd_lib/utils/: bufferDebugger.cpp
csd2c/25-26/blueprint_projects/Plugin_Focus/: CMakeLists.txt  EffectsChain.h  ParameterID.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md
csd2c/25-26/blueprint_projects/Plugin_Focus/csd_lib/: CMakeLists.txt  audiocomponent.h
csd2c/25-26/blueprint_projects/Plugin_Focus/csd_lib/effects/: waveShaper.cpp
csd2c/25-26/blueprint_projects/Plugin_Focus/csd_lib/utils/: osc.cpp  osc.h
csd2c/25-26/codeclinics/: CMakeLists.txt
csd2c/25-26/codeclinics/cc7/: CMakeLists.txt  ParameterID.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  pngslider.h  pngslider_guide.md  svgslider.h  svgslider_guide.md
csd2c/25-26/csd_lib/: CMakeLists.txt
csd2c/25-26/extra_topics/imageProcessing/3_basic_image_IO/: CMakeLists.txt
(+90 files in other folders)
